# NLP-chellange

./: .gitignore  README.md  baseline-random-input.py  baseline-tfidf.py  evaluate.py  in-header.tsv  load_data.py  load_datasets.py  model.py  pyproject.toml  siamese_model.py
dev-0/: expected.tsv
train/: evaluate.py  expected.tsv
