[tool.poetry]
name = "book-dialogues-pl"
version = "0.1.0"
description = ""
authors = ["Stanisław Giziński <s.gizinski84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.13.0"
jupyter = "^1.0.0"
transformers = "^4.19.2"
sklearn = "^0.0"
sentence-transformers = "^2.2.0"
pandas = "^1.4.2"
tqdm = "^4.64.0"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
